--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,23 @@
 {
 	"presets": [
-        "env"
-    ],
-  "plugins": ["transform-react-jsx"],
-  "ignore": [
-    "foo.js",
-    "bar/**/*.js"
-  ]
+		["es2016"],
+    "react",
+		["env", {
+			"targets": {
+				"browsers": "last 2 versions"
+			},
+			"loose": true,
+			"modules": false
+		}]
+	],
+	"plugins": [
+    "babel-plugin-transform-class-properties"
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
+    }
+  }
 }
