--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-
+    "babel-plugin-dynamic-import-webpack": "1.0.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-register": "6.24.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -19,23 +21,25 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.3",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-		"babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
-		"eslint": "3.19.0",
-		"eslint-config-airbnb": "15.0.1",
-		"eslint-config-prettier": "2.1.1",
-		"eslint-config-react": "1.1.7",
-		"eslint-loader": "1.7.1",
-		"eslint-plugin-flow": "2.29.1",
-		"eslint-plugin-flowtype": "2.33.0",
-		"eslint-plugin-import": "2.3.0",
-		"eslint-plugin-jsx-a11y": "5.0.3",
-		"eslint-plugin-prettier": "2.1.1",
-		"eslint-plugin-react": "7.0.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-config-prettier": "2.1.1",
+    "eslint-config-react": "1.1.7",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-flow": "2.29.1",
+    "eslint-plugin-flowtype": "2.33.0",
+    "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-prettier": "2.1.1",
+    "eslint-plugin-react": "7.0.1",
     "html-webpack-plugin": "^2.30.1",
-		"prettier": "1.3.1",
+    "prettier": "1.3.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-css-loaders": "^1.0.0",
